# kata

./: .gitattributes  .gitignore  CLAUDE.md  CONTRACTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.claude/: settings.json
.claude/plugins/kata/: README.md
.claude/skills/kata-brainstorming/: SKILL.md
.claude/skills/kata-design/: SKILL.md
.github/workflows/: ci.yml
app/: CLAUDE.md  package-lock.json  package.json  vitest.config.ts
app/scripts/: screenshots.mjs  stage-sidecar.mjs
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/bindings/: Auth.ts  CatalogEntry.ts  EntryKind.ts  Identity.ts  IdentityMode.ts  Interactive.ts  Isolation.ts  Leash.ts  Model.ts  PluginConfig.ts  Preset.ts  RunRecord.ts  RunSpec.ts  kata-events.ts
app/src/lib/: api.ts  events.test.ts  events.ts  katas.test.ts  katas.ts  kit.test.ts  kit.ts  launch.test.ts  launch.ts  library.test.ts  library.ts  mock.ts  run.svelte.ts  run.test.ts  scroll.test.ts  scroll.ts  spec.test.ts  spec.ts  toast.svelte.ts  toast.test.ts  toast.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/styles/: fonts.css  workbench.css
crates/kata-cli/: Cargo.toml
crates/kata-cli/src/: main.rs
crates/kata-cli/tests/: cli_it.rs  smoke_real_claude.rs
crates/kata-cli/tests/golden/: run_ask_events.jsonl  run_ok_events.jsonl
crates/kata-core/: Cargo.toml  build.rs
crates/kata-core/src/: ask.rs  assemble.rs  builtin.rs  bundle.rs  catalog.rs  changeset.rs  command.rs  event.rs  fsutil.rs  history.rs  katas.rs  lib.rs  presets.rs  run.rs  spec.rs  worktree.rs
crates/kata-core/tests/: run_it.rs
crates/kata-core/tests/fixtures/: stream-hello.jsonl
design/: CLAUDE.md  PROMPT.md  README.md
design/design_system/: _ds_bundle.js  base.css  fonts.css  styles.css
design/design_system/components/: components.css
design/prototype/: README.md  app.jsx  data.js  hitl.html  hitl.jsx  icons.js  index.html  library-data.js  library.html  library.jsx  panes.jsx  workbench.css
docs/: adding-a-feature.md  consuming-kata.md  releasing.md
docs/superpowers/plans/: 2026-06-12-kata-engine.md  2026-06-13-m5-RESUMPTION.md  2026-06-13-m5-workbench-compose.md  (+14 more)
examples/katas/: README.md  brainstorm-feature.toml  context.toml  execute-plan.toml  implement.toml  plan.toml  prd.toml  triage.toml  write-plan.toml
schema/: kata-events.schema.json  kata-runspec.schema.json
scripts/: build-release.ps1  bump-version.ps1
(+59 files in other folders)
