[workspace]
resolver = "2"
members = ["crates/kata-core", "crates/kata-cli", "app/src-tauri"]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.4.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
