[package]
name = "kata-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "kata_core"
path = "src/lib.rs"

[[bin]]
name = "fake-claude"
path = "src/bin/fake-claude.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tempfile.workspace = true
ts-rs = { version = "10", optional = true, default-features = false }

[features]
ts = ["dep:ts-rs"]

[dev-dependencies]
serial_test = "3"
